# perfgate-swarm

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  GEMINI.md  LICENSE-APACHE  README.md  ROADMAP.md  TESTING.md  action.yml  codecov.yml  deny.toml  mutants.toml  perfgate.toml
crates/perfgate/: Cargo.toml  README.md
crates/perfgate-adapters/: CLAUDE.md  Cargo.toml  README.md
crates/perfgate-adapters/src/: lib.rs
crates/perfgate-api/: Cargo.toml  README.md
crates/perfgate-api/src/: auth.rs  lib.rs
crates/perfgate-app/: CLAUDE.md  Cargo.toml  README.md
crates/perfgate-app/src/: aggregate.rs  badge.rs  bisect.rs  check.rs  diff.rs  export.rs  lib.rs  paired.rs  render.rs  runtime.rs  sensor.rs  sensor_report.rs  watch.rs
crates/perfgate-app/src/render/: summary.rs
crates/perfgate-app/src/snapshots/: perfgate_app__export__tests__snapshot_tests__compare_html.snap  perfgate_app__export__tests__snapshot_tests__compare_prometheus.snap  perfgate_app__export__tests__snapshot_tests__run_html.snap  perfgate_app__export__tests__snapshot_tests__run_prometheus.snap  perfgate_app__sensor__snapshot_tests__snapshot_aggregated_multi_bench.snap  perfgate_app__sensor__snapshot_tests__snapshot_error_report.snap  perfgate_app__sensor__snapshot_tests__snapshot_fail_report.snap  perfgate_app__sensor__snapshot_tests__snapshot_pass_report.snap  perfgate_app__sensor__snapshot_tests__snapshot_truncated_report.snap
crates/perfgate-cli/: CLAUDE.md  Cargo.toml  README.md
crates/perfgate-cli/src/: adoption_packs.rs  artifact_explain.rs  baseline.rs  baseline_doctor.rs  benchmark_passport.rs  check_guidance.rs  cli_parsing.rs  decision_debt.rs  decision_suggest.rs  doctor.rs  imported_evidence.rs  init.rs  ledger_doctor.rs  main.rs  policy.rs  policy_profiles.rs  policy_profiles_data.in  probe_templates.rs  repair_context.rs  review.rs  storage.rs
crates/perfgate-cli/src/doctor/: signal_recommendation.rs
crates/perfgate-cli/tests/: cli_abi_conformance_tests.rs  cli_adoption_tests.rs  cli_aggregate_tests.rs  cli_annotations_tests.rs  cli_baseline_bootstrap_tests.rs  cli_calibrate_tests.rs  cli_cargo_bench_tests.rs  cli_check_tests.rs  cli_cockpit_tests.rs  cli_comment_tests.rs  cli_compare_tests.rs  cli_cpu_time_tests.rs  cli_decision_suggest_tests.rs  cli_diff_tests.rs  cli_doctor_tests.rs  cli_explain_tests.rs  cli_export_tests.rs  cli_first_run_e2e_tests.rs  cli_help_snapshot_tests.rs  cli_host_mismatch_tests.rs  cli_ingest_tests.rs  cli_init_tests.rs  cli_md_tests.rs  cli_mock_server_tests.rs  cli_paired_tests.rs  cli_performance_decision_example_tests.rs  cli_policy_tests.rs  cli_probe_tests.rs  cli_promote_tests.rs  cli_release_decision_proof_tests.rs  cli_repair_context_agent_tests.rs  cli_report_tests.rs  cli_review_tests.rs  cli_run_tests.rs  cli_scenario_tests.rs  cli_serve_tests.rs  cli_server_tests.rs  cli_structured_decision_e2e_tests.rs  cli_tradeoff_tests.rs
crates/perfgate-cli/tests/common/: mod.rs
crates/perfgate-cli/tests/fixtures/: baseline.json  baseline_host_linux_x86.json  current_extra_metric.json  current_fail.json  current_host_different_arch.json  current_pass.json  (+6 more)
crates/perfgate-client/: Cargo.toml  README.md
crates/perfgate-client/src/: client.rs  config.rs  error.rs  fallback.rs  lib.rs  types.rs
crates/perfgate-client/tests/: client_server_integration.rs
crates/perfgate-domain/: CLAUDE.md  Cargo.toml  README.md
crates/perfgate-domain/examples/: blame_example.rs  budget_example.rs  domain_example.rs  stats_example.rs
crates/perfgate-domain/src/: budget.rs  lib.rs  paired.rs  significance.rs
crates/perfgate-error/: Cargo.toml  README.md
crates/perfgate-error/src/: lib.rs
crates/perfgate-export/: Cargo.toml  README.md
crates/perfgate-export/examples/: export_example.rs
crates/perfgate-export/src/: lib.rs
crates/perfgate-fake/: Cargo.toml  README.md
crates/perfgate-fake/examples/: fake_example.rs
crates/perfgate-fake/src/: builder.rs  clock.rs  host_probe.rs  lib.rs  process_runner.rs
crates/perfgate-github/: Cargo.toml
crates/perfgate-github/src/: comment.rs
crates/perfgate-paired/: Cargo.toml  README.md
crates/perfgate-paired/src/: lib.rs
crates/perfgate-profile/: Cargo.toml
crates/perfgate-render/: Cargo.toml  README.md
crates/perfgate-render/examples/: render_example.rs
crates/perfgate-render/src/: lib.rs  summary.rs
crates/perfgate-selfbench/: Cargo.toml  README.md
crates/perfgate-selfbench/src/: main.rs
crates/perfgate-sensor/: Cargo.toml  README.md
crates/perfgate-sensor/examples/: sensor_example.rs
crates/perfgate-sensor/src/: lib.rs
crates/perfgate-server/: Cargo.toml  README.md
crates/perfgate-server/assets/: index.html
crates/perfgate-server/src/: auth.rs  cleanup.rs  credential_source.rs  error.rs  handlers.rs  lib.rs  metrics.rs  models.rs  oidc.rs  server.rs  testing.rs
crates/perfgate-server/tests/: real_server_integration.rs  server_integration.rs
crates/perfgate-types/: CLAUDE.md  Cargo.toml  README.md
crates/perfgate-types/examples/: types_example.rs  validation_example.rs
crates/perfgate-types/proptest-regressions/: lib.txt
crates/perfgate-types/src/: baseline_service.rs  config.rs  defaults_config.rs  error.rs  fingerprint.rs  io.rs  lib.rs  paired.rs  repair_context.rs  structured_evidence.rs  validation.rs
crates/perfgate/examples/: blame_example.rs  budget_example.rs  domain_example.rs  export_example.rs  paired_example.rs  render_example.rs  sensor_example.rs  stats_example.rs
crates/perfgate/src/: integrations.rs  lib.rs  probe.rs  runtime.rs
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: compare_stats.rs  fuzz_budget.rs  fuzz_export_csv.rs  fuzz_host_detect.rs  fuzz_paired.rs  fuzz_sensor_report.rs  fuzz_sha256.rs  fuzz_significance.rs  fuzz_stats.rs  fuzz_validation.rs  parse_compare_receipt.rs  parse_config.rs  parse_duration.rs  parse_report_receipt.rs  parse_run_receipt.rs  render_markdown.rs
xtask/: CLAUDE.md  Cargo.toml  README.md
xtask/src/: lib.rs  main.rs
xtask/tests/: xtask_smoke_tests.rs
(+546 files in other folders)
