[workspace]
resolver = "2"
default-members = [
  "crates/perfgate",
  "crates/perfgate-cli",
  "crates/perfgate-server",
]
members = [
  "crates/perfgate-error",
  "crates/perfgate-config",
  "crates/perfgate-api",
  "crates/perfgate-types",
  "crates/perfgate-significance",
  "crates/perfgate-paired",
  "crates/perfgate-budget",
  "crates/perfgate-domain",
  "crates/perfgate-host-detect",
  "crates/perfgate-sha256",
  "crates/perfgate-render",
  "crates/perfgate-export",
  "crates/perfgate-sensor",
  "crates/perfgate-fake",
  "crates/perfgate-adapters",
  "crates/perfgate-profile",
  "crates/perfgate-app",
  "crates/perfgate-ingest",
  "crates/perfgate-cli",
  "crates/perfgate-server",
  "crates/perfgate-client",
  "crates/perfgate-github",
  "crates/perfgate",
  "crates/perfgate-scaling",
  "xtask", "crates/perfgate-selfbench",
]
exclude = [
  "fuzz",
]

[workspace.package]
version = "0.15.1"
edition = "2024"
rust-version = "1.92"
license = "MIT OR Apache-2.0"
repository = "https://github.com/EffortlessMetrics/perfgate"
authors = ["Effortless Metrics"]
homepage = "https://github.com/EffortlessMetrics/perfgate"
keywords = ["performance", "benchmarking", "budgets", "baseline", "ci"]
categories = ["development-tools", "command-line-utilities"]

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }

[workspace.lints.rust]
unsafe_code = "warn"

# Root package for workspace-level integration tests (BDD/cucumber)
[package]
name = "perfgate-tests"
description = "Workspace integration and BDD tests for perfgate"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme = "README.md"
publish = false

[dev-dependencies]
cucumber.workspace = true
tempfile.workspace = true
assert_cmd.workspace = true
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
wiremock = "0.6"
serde_json.workspace = true
toml.workspace = true
perfgate-types.workspace = true
perfgate-host-detect.workspace = true
perfgate-sha256.workspace = true
perfgate-render.workspace = true
perfgate-export.workspace = true
perfgate-sensor.workspace = true
perfgate-error.workspace = true
perfgate-budget.workspace = true
perfgate-domain.workspace = true
perfgate-paired.workspace = true
perfgate-app.workspace = true
perfgate-significance.workspace = true
perfgate-config.workspace = true
perfgate-api.workspace = true
perfgate.workspace = true
glob.workspace = true
shell-words.workspace = true

[[test]]
name = "cucumber"
harness = false

[[test]]
name = "integration"
path = "tests/integration/mod.rs"

[lints]
workspace = true

[workspace.dependencies]
anyhow = "1.0.102"
axum = { version = "0.8.1", features = ["macros"] }
clap = { version = "4.5.60", features = ["derive"] }
humantime = "2.3.0"
http = "1.2.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
async-trait = "0.1.86"
time = { version = "0.3.47", features = ["formatting"] }
uuid = { version = "1.21.0", features = ["v4"] }
schemars = { version = "1.2.1", features = ["uuid1", "chrono04"] }
shell-words = "1.1.1"
toml = "0.9.8"
statrs = "0.18.0"
glob = "0.3.2"
notify = { version = "7.0", default-features = false, features = ["macos_kqueue"] }
ctrlc = "3.4"
url = "2.5.4"
regex = "1.12"

# Test deps
assert_cmd = "2.1.2"
predicates = "3.1.4"
insta = { version = "1.46.3", features = ["json"] }
cucumber = "0.22.1"
tempfile = "3.26.0"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
wiremock = "0.6"

# Unix-only
libc = "0.2.182"

# Internal crates
perfgate-error = { path = "crates/perfgate-error", version = "0.15.1" }
perfgate-api = { path = "crates/perfgate-api", version = "0.15.1" }
perfgate-config = { path = "crates/perfgate-config", version = "0.15.1" }
perfgate-types = { path = "crates/perfgate-types", version = "0.15.1" }
perfgate-significance = { path = "crates/perfgate-significance", version = "0.15.1" }
perfgate-domain = { path = "crates/perfgate-domain", version = "0.15.1" }
perfgate-paired = { path = "crates/perfgate-paired", version = "0.15.1" }
perfgate-budget = { path = "crates/perfgate-budget", version = "0.15.1" }
perfgate-host-detect = { path = "crates/perfgate-host-detect", version = "0.15.1" }
perfgate-sha256 = { path = "crates/perfgate-sha256", version = "0.15.1" }
perfgate-render = { path = "crates/perfgate-render", version = "0.15.1" }
perfgate-export = { path = "crates/perfgate-export", version = "0.15.1" }
perfgate-sensor = { path = "crates/perfgate-sensor", version = "0.15.1" }
perfgate-fake = { path = "crates/perfgate-fake", version = "0.15.1" }
perfgate-adapters = { path = "crates/perfgate-adapters", version = "0.15.1" }
perfgate-ingest = { path = "crates/perfgate-ingest", version = "0.15.1" }
perfgate-profile = { path = "crates/perfgate-profile", version = "0.15.1" }
perfgate-app = { path = "crates/perfgate-app", version = "0.15.1" }
perfgate-server = { path = "crates/perfgate-server", version = "0.15.1" }
perfgate-client = { path = "crates/perfgate-client", version = "0.15.1" }
perfgate-scaling = { path = "crates/perfgate-scaling", version = "0.15.1" }
perfgate-github = { path = "crates/perfgate-github", version = "0.15.1" }
perfgate = { path = "crates/perfgate", version = "0.15.1" }
