[workspace]
resolver = "2"
default-members = [
  "crates/perfgate",
  "crates/perfgate-cli",
  "crates/perfgate-server",
]
members = [
  "crates/perfgate-types",
  "crates/perfgate-fake",
  "crates/perfgate-cli",
  "crates/perfgate-server",
  "crates/perfgate-client",
  "crates/perfgate",
  "xtask", "crates/perfgate-selfbench",
]
exclude = [
  "fuzz",
]

[workspace.package]
version = "0.17.0"
edition = "2024"
rust-version = "1.95"
license = "MIT OR Apache-2.0"
repository = "https://github.com/EffortlessMetrics/perfgate"
authors = ["Effortless Metrics"]
homepage = "https://github.com/EffortlessMetrics/perfgate"
keywords = ["performance", "benchmarking", "budgets", "baseline", "ci"]
categories = ["development-tools", "command-line-utilities"]

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
dbg_macro = "deny"
todo = "deny"
unimplemented = "deny"
same_length_and_capacity = "deny"
manual_checked_ops = "warn"
manual_take = "warn"
unnecessary_trailing_comma = "warn"

[workspace.lints.rust]
unsafe_code = "warn"
unsafe_op_in_unsafe_fn = "deny"
unused_must_use = "deny"
unexpected_cfgs = "warn"
const_item_interior_mutations = "deny"
function_casts_as_integer = "deny"
unused_visibilities = "warn"

# Root package for workspace-level integration tests (BDD/cucumber)
[package]
name = "perfgate-tests"
description = "Workspace integration and BDD tests for perfgate"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme = "README.md"
publish = false

[dev-dependencies]
cucumber.workspace = true
tempfile.workspace = true
assert_cmd.workspace = true
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
wiremock = "0.6"
serde_json.workspace = true
toml.workspace = true
perfgate-types.workspace = true
perfgate.workspace = true
glob.workspace = true
shell-words.workspace = true

[[test]]
name = "cucumber"
harness = false

[[test]]
name = "integration"
path = "tests/integration/mod.rs"

[lints]
workspace = true

[workspace.dependencies]
anyhow = "1.0.102"
axum = { version = "0.8.1", features = ["macros"] }
clap = { version = "4.5.60", features = ["derive"] }
humantime = "2.3.0"
http = "1.2.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
async-trait = "0.1.86"
time = { version = "0.3.47", features = ["formatting"] }
uuid = { version = "1.21.0", features = ["v4"] }
schemars = { version = "1.2.1", features = ["uuid1", "chrono04"] }
shell-words = "1.1.1"
toml = "0.9.8"
statrs = "0.18.0"
glob = "0.3.2"
notify = { version = "7.0", default-features = false, features = ["macos_kqueue"] }
ctrlc = "3.4"
url = "2.5.4"
regex = "1.12"
yaml_serde = "0.10.4"

# Test deps
assert_cmd = "2.1.2"
predicates = "3.1.4"
insta = { version = "1.46.3", features = ["json"] }
cucumber = "0.22.1"
tempfile = "3.26.0"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
wiremock = "0.6"

# Unix-only
libc = "0.2.182"

# Internal crates
perfgate-types = { path = "crates/perfgate-types", version = "0.17.0" }
perfgate-fake = { path = "crates/perfgate-fake", version = "0.17.0" }
perfgate-server = { path = "crates/perfgate-server", version = "0.17.0" }
perfgate-client = { path = "crates/perfgate-client", version = "0.17.0" }
perfgate = { path = "crates/perfgate", version = "0.17.0" }
