[package]
name = "xtask"
description = "Developer automation tasks for the perfgate workspace"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
authors.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
clap.workspace = true
jsonschema = "0.26"
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
perfgate-types.workspace = true
perfgate-domain.workspace = true
perfgate-app.workspace = true
glob.workspace = true
regex.workspace = true
toml.workspace = true
yaml_serde.workspace = true

[lints]
workspace = true
