[package]
name = "perfgate-adapters"
description = "Workspace-only compatibility wrapper for perfgate runtime adapters"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/perfgate/latest/perfgate/runtime/"
authors.workspace = true
readme = "README.md"
keywords = ["performance", "benchmarking", "process", "metrics", "host"]
categories = ["development-tools"]
publish = false

[dependencies]
perfgate.workspace = true

[lints]
workspace = true
