[package]
name = "perfgate-api"
description = "Workspace-only compatibility wrapper for perfgate baseline service contracts"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
documentation = "https://docs.rs/perfgate-api"
authors.workspace = true
keywords = ["api", "baseline", "performance", "benchmarking"]
categories = ["web-programming", "development-tools"]
publish = false

[dependencies]
perfgate-types.workspace = true

[features]
default = []
server = []

[lints]
workspace = true
