[package]
name = "perfgate-app"
description = "Application use-cases and renderers for perfgate workflows"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/perfgate-app"
authors.workspace = true
readme = "README.md"
keywords = ["performance", "benchmarking", "budgets", "reporting", "ci"]
categories = ["development-tools"]

[dependencies]
perfgate-types.workspace = true
perfgate-domain.workspace = true
perfgate-adapters.workspace = true
perfgate-sensor.workspace = true
anyhow.workspace = true
glob.workspace = true
handlebars = "6.3"
humantime.workspace = true
serde.workspace = true
serde_json.workspace = true
time.workspace = true
toml.workspace = true
uuid.workspace = true

[dev-dependencies]
insta.workspace = true
proptest = "1.7"
tempfile.workspace = true

[lints]
workspace = true
