[package]
name = "perfgate-app"
description = "Application use-cases, runtime adapters, and renderers for perfgate workflows"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/perfgate-app"
authors.workspace = true
readme = "README.md"
keywords = ["performance", "benchmarking", "budgets", "reporting", "ci"]
categories = ["development-tools"]
publish = false

[dependencies]
perfgate.workspace = true

[lints]
workspace = true
