[package]
name = "perfgate-client"
description = "Client library for the perfgate baseline service"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme = "README.md"
documentation = "https://docs.rs/perfgate-client"
keywords = ["performance", "benchmarking", "baseline", "client"]
categories = ["web-programming::http-client", "development-tools"]

[dependencies]
anyhow.workspace = true
perfgate-types.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls-webpki-roots"] }
tokio = { version = "1", features = ["time", "fs", "io-util"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
url = "2"
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tokio = { version = "1", features = ["test-util", "macros", "rt-multi-thread"] }
wiremock = "0.6"
tempfile = "3"

[features]
default = []

[lints]
workspace = true
