[package]
name = "perfgate-domain"
description = "I/O-free statistics, budget policy, and host mismatch logic for perfgate"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/perfgate-domain"
authors.workspace = true
readme = "README.md"
keywords = ["performance", "benchmarking", "budgets", "statistics", "regression"]
categories = ["algorithms", "development-tools"]

[dependencies]
perfgate-types.workspace = true
thiserror.workspace = true
statrs.workspace = true
serde.workspace = true
schemars.workspace = true

[dev-dependencies]
insta.workspace = true
proptest = "1"
approx = "0.5"

[lints]
workspace = true
