[package]
name = "perfgate-domain"
description = "I/O-free statistics, budget policy, and host mismatch logic for perfgate"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/perfgate-domain"
authors.workspace = true
readme = "README.md"
keywords = ["performance", "benchmarking", "budgets", "statistics", "regression"]
categories = ["algorithms", "development-tools"]
publish = false

[dependencies]
perfgate.workspace = true

[dev-dependencies]
perfgate-types.workspace = true
insta.workspace = true
proptest = "1"
approx = "0.5"
serde_json.workspace = true

[lints]
workspace = true
