[package]
name = "perfgate-error"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Compatibility wrapper for perfgate error contract types"
readme = "README.md"
documentation = "https://docs.rs/perfgate-error"
keywords = ["error", "error-handling", "performance", "benchmarking"]
categories = ["development-tools"]
publish = false

[dependencies]
perfgate-types.workspace = true

[lints]
workspace = true
