[package]
name = "perfgate-export"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Workspace-only compatibility wrapper for perfgate::presentation::export"
readme = "README.md"
documentation = "https://docs.rs/perfgate-export"
keywords = ["export", "csv", "prometheus", "benchmarking"]
categories = ["development-tools"]
publish = false

[dependencies]
perfgate.workspace = true

[dev-dependencies]
perfgate-types.workspace = true

[lints]
workspace = true
