[package]
name = "perfgate-fake"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Test utilities and fake implementations for perfgate testing"
readme = "README.md"
keywords = ["testing", "fake", "mock", "benchmarking"]
categories = ["development-tools::testing"]
publish = false

[dependencies]
perfgate.workspace = true
perfgate-types.workspace = true
anyhow.workspace = true

[dev-dependencies]
# No additional dev dependencies needed

[lints]
workspace = true
