[package]
name = "perfgate-paired"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Paired benchmarking statistics for A/B comparison"
readme = "README.md"
documentation = "https://docs.rs/perfgate-paired"
keywords = ["paired", "benchmarking", "statistics", "ab-testing"]
categories = ["mathematics", "development-tools"]
publish = false

[dependencies]
perfgate-domain.workspace = true

[dev-dependencies]
perfgate-types.workspace = true
proptest = "1.7"
approx = "0.5"
[lints]
workspace = true
