[package]
name = "perfgate-profile"
description = "Automatic flamegraph profiling on performance regression detection"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme = "README.md"
keywords = ["performance", "profiling", "flamegraph", "regression"]
categories = ["development-tools"]

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true

[dev-dependencies]
tempfile.workspace = true
serde_json.workspace = true

[lints]
workspace = true
