[package]
name = "perfgate-render"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Rendering utilities for perfgate output (markdown, GitHub annotations)"
keywords = ["markdown", "github", "annotations", "rendering"]
categories = ["development-tools"]
documentation = "https://docs.rs/perfgate-render"
readme = "README.md"

[dependencies]
perfgate-types.workspace = true
serde_json.workspace = true
anyhow.workspace = true
handlebars = "6.3"
glob.workspace = true
tempfile = "3.26.0"

[dev-dependencies]
proptest = "1.7"
insta.workspace = true

[lints]
workspace = true
