[package]
name = "perfgate-render"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Workspace-only compatibility wrapper for perfgate::presentation::render"
keywords = ["markdown", "github", "annotations", "rendering"]
categories = ["development-tools"]
documentation = "https://docs.rs/perfgate-render"
readme = "README.md"
publish = false

[dependencies]
perfgate-app.workspace = true

[dev-dependencies]
perfgate.workspace = true
perfgate-types.workspace = true

[lints]
workspace = true
