[package]
name = "perfgate-sensor"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Workspace-only compatibility wrapper for perfgate::presentation::sensor"
readme = "README.md"
documentation = "https://docs.rs/perfgate-sensor"
keywords = ["sensor", "report", "cockpit", "integration"]
categories = ["development-tools"]
publish = false

[dependencies]
perfgate.workspace = true

[dev-dependencies]
perfgate-types.workspace = true
serde_json.workspace = true

[lints]
workspace = true
