[package]
name = "perfgate-server"
description = "REST API server for centralized baseline management"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme = "README.md"
documentation = "https://docs.rs/perfgate-server"
keywords = ["server", "baseline", "performance", "benchmarking", "api"]
categories = ["web-programming::http-server", "development-tools"]

[dependencies]
# Async runtime
tokio = { version = "1.49.0", features = ["full"] }

# Web framework
axum = { version = "0.8.1", features = ["macros"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["cors", "trace", "request-id", "fs"] }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }

# Asset Embedding
rust-embed = "8.5.0"
mime_guess = "2.0.5"

# Logging
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }

# Time and IDs
chrono = { version = "0.4.39", features = ["serde"] }
uuid = { workspace = true }

# Database
rusqlite = { version = "0.32.1", features = ["bundled"] }
sqlx = { version = "0.8.3", default-features = false, features = ["postgres", "runtime-tokio-rustls", "json", "chrono", "uuid"] }

# Validation
perfgate-types.workspace = true
perfgate.workspace = true

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# CLI
clap = { workspace = true }
regex = { workspace = true }
toml.workspace = true

# Metrics
metrics = "0.24.3"
metrics-exporter-prometheus = { version = "0.18.1", default-features = false }

# Additional dependencies
sha2 = "0.10.8"
base64 = "0.22.1"
async-trait = "0.1.86"
jsonwebtoken = { version = "10", features = ["rust_crypto", "hmac", "sha2"] }
object_store = { version = "0.11.0", features = ["aws", "gcp", "azure"] }
futures = "0.3.31"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls-webpki-roots"] }

[dev-dependencies]
tempfile = { workspace = true }
tokio-test = "0.4.4"
http-body-util = "0.1.2"
tower = { version = "0.5.2", features = ["util"] }
perfgate-client.workspace = true
wiremock = "0.6"
uuid = { workspace = true }
uselesskey = { version = "0.2.0", features = ["hmac"] }
uselesskey-jsonwebtoken = { version = "0.2.0", features = ["hmac"] }
# Self-reference to activate test-utils for integration tests
perfgate-server = { path = ".", features = ["test-utils"] }

[[bin]]
name = "perfgate-server"
path = "src/bin/perfgate-server.rs"

[[test]]
name = "real_server_integration"
path = "tests/real_server_integration.rs"

[features]
default = []
test-utils = []

[lints]
workspace = true
