[package]
name = "perfgate-types"
description = "Versioned receipt/config contracts and JSON schemas for perfgate"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/perfgate-types"
authors.workspace = true
readme = "README.md"
keywords = ["performance", "benchmarking", "receipts", "schema", "ci"]
categories = ["data-structures", "development-tools"]

[features]
default = []
arbitrary = ["dep:arbitrary"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
schemars.workspace = true
thiserror.workspace = true
toml.workspace = true
toml_edit = "0.23"
chrono = { version = "0.4.39", features = ["serde"] }
uuid.workspace = true
arbitrary = { version = "1", features = ["derive"], optional = true }

[dev-dependencies]
insta.workspace = true
tempfile.workspace = true
proptest = "1"
proptest-derive = "0.4"

[lints]
workspace = true
