[package]
name = "perfgate"
description = "Core library for perfgate performance budgets and baseline diffs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/perfgate"
authors.workspace = true
readme = "README.md"
keywords.workspace = true
categories.workspace = true

[dependencies]
perfgate-types.workspace = true
perfgate-domain.workspace = true
perfgate-adapters.workspace = true
perfgate-app.workspace = true
perfgate-sensor.workspace = true
anyhow.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
time.workspace = true
uuid.workspace = true

[dev-dependencies]
serde_json.workspace = true
tempfile.workspace = true

[features]
default = []

[lints]
workspace = true
