[package]
name = "perfgate"
description = "Core library for perfgate performance budgets and baseline diffs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/perfgate"
authors.workspace = true
readme = "README.md"
keywords.workspace = true
categories.workspace = true

[dependencies]
perfgate-types.workspace = true
perfgate-domain.workspace = true
perfgate-app.workspace = true
anyhow.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
time.workspace = true
uuid.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls-webpki-roots"], optional = true }
tracing = { version = "0.1", optional = true }

[dev-dependencies]
serde_json.workspace = true
tempfile.workspace = true
tokio = { version = "1", features = ["test-util", "macros", "rt-multi-thread"] }
wiremock.workspace = true

[features]
default = []
github = ["dep:reqwest", "dep:tracing"]

[lints]
workspace = true
